--- a/slider/package.json
+++ b/slider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/slider",
-  "version": "0.1.6",
+  "version": "0.1.11",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -32,8 +32,8 @@
     "@react-native-aria/interactions": "^0.2.8",
     "@react-native-aria/slider": "^0.2.5-alpha.2",
     "@react-stately/slider": "^3.2.4",
-    "@universa11y/react-native-aria": "*",
-    "@universa11y/utils": "*",
+    "@universa11y/react-native-aria": "latest",
+    "@universa11y/utils": "latest",
     "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
