--- a/textarea/package.json
+++ b/textarea/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/textarea",
-  "version": "0.1.5",
+  "version": "0.1.11",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "@universa11y/form-control": "*",
+    "@universa11y/form-control": "latest",
+    "@universa11y/utils": "latest",
     "react-native-svg": "13.4.0"
   },
   "peerDependencies": {
