--- a/stack/package.json
+++ b/stack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/stack",
-  "version": "0.1.2",
+  "version": "0.1.11",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "@universa11y/utils": "latest"
   },
   "peerDependencies": {
     "react": ">=16",
