--- a/packages/divider/package.json
+++ b/packages/divider/package.json
@@ -27,10 +27,7 @@
     "tsconfig": "7",
     "typescript": "^4.7.4"
   },
-  "dependencies": {
-    "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "13.4.0"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">=16",
     "react-dom": ">=16"
