--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/overlays",
-  "version": "0.3.3-rc.0",
+  "version": "0.3.4",
   "description": "Overlay utilities. Part of react-native-aria",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
