--- a/packages/popover/package.json
+++ b/packages/popover/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
-    "@react-native-aria/overlays": "^0.3.4",
+    "@react-native-aria/overlays": "0.3.5-rc.2",
     "@universa11y/floating-ui": "latest",
     "@universa11y/hooks": "latest",
     "@universa11y/overlay": "latest",
