--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -27,6 +27,7 @@
     "@dank-style/react": "0.1.53",
     "@floating-ui/react": "^0.19.0",
     "@gluestack/design-system": "^0.1.53",
+    "@gluestack/ui-compiled": "^0.1.0",
     "@react-native-aria/overlays": "0.3.5-rc.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
