--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -3,19 +3,20 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@universa11y/button": ["../../packages/button/src"],
+      "@universa11y/actionsheet": ["../../packages/actionsheet/src"],
       "@universa11y/avatar": ["../../packages/avatar/src"],
+      "@universa11y/button": ["../../packages/button/src"],
       "@universa11y/center": ["../../packages/center/src"],
       "@universa11y/checkbox": ["../../packages/checkbox/src"],
       "@universa11y/divider": ["../../packages/divider/src"],
       "@universa11y/heading": ["../../packages/heading/src"],
       "@universa11y/hstack": ["../../packages/hstack/src"],
+      "@universa11y/icon-button": ["../../packages/icon-buttonl/src"],
+      "@universa11y/icon": ["../../packages/icon/src"],
       // "@gluestack/popper": ["../popper/src/index"],
       // "@gluestack/ui": ["../ui/src/index"],
       // "@gluestack/ui-lucide-icons": ["../ui/lucide-icons/src/"],
       "@gluestack/ui": ["../../packages/button/src"],
-      "@universa11y/actionsheet": ["../../packages/actionsheet/src"],
-      "@universa11y/vstack": ["../../packages/vstack/src"],
       "@universa11y/tooltip": ["../../packages/tooltip/src"],
       "@universa11y/popover": ["../../packages/popover/src"],
       "@universa11y/provider": ["../../packages/provider/src"],
@@ -31,14 +32,15 @@
       "@universa11y/select": ["../../packages/select/src"],
       "@universa11y/modal": ["../../packages/modal/src"],
       "@universa11y/fab": ["../../packages/fab/src"],
+      "@universa11y/toast": ["../../packages/toast/src"],
       "@universa11y/alert-dialog": ["../../packages/alert-dialog/src"],
+      "@universa11y/alert": ["../../packages/alert/src"],
       "@universa11y/form-control": ["../../packages/form-control/src"],
-      "@universa11y/icon-button": ["../../packages/icon-buttonl/src"],
-      "@universa11y/icon": ["../../packages/icon/src"],
       "@universa11y/tabs": ["../../packages/tabs/src"],
       "@universa11y/floating-ui": ["../../packages/floating-ui/src"],
       "@universa11y/overlay": ["../../packages/overlay/src"],
-      "@universa11y/stack": ["../../packages/stack/src"]
+      "@universa11y/stack": ["../../packages/stack/src"],
+      "@universa11y/vstack": ["../../packages/vstack/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
