--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -6,7 +6,8 @@
     "@dank-style/config": ["../config/src"],
     "@dank-style/media-query": ["../media-query/src"],
     "@dank-style/convert-utility-to-sx": ["../convert-utility-to-sx/src"],
-    "@dank-style/cssify": ["../cssify/src"]
+    "@dank-style/cssify": ["../cssify/src"],
+    "@dank-style/css-injector": ["../css-injector/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
