--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@dank-style/react": "^0.1.43",
     "@gluestack/design-system": "^0.1.27",
+    "@legendapp/motion": "^2.2.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/slider": "4.2.4",
