--- a/modal/package.json
+++ b/modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@universa11y/modal",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -29,10 +29,10 @@
   },
   "dependencies": {
     "@react-native-aria/focus": "^0.2.7",
+    "@react-native-aria/overlays": "0.3.5",
     "@universa11y/hooks": "latest",
     "@universa11y/icon": "latest",
     "@universa11y/overlay": "latest",
-    "@react-native-aria/overlays": "0.3.5-rc.2",
     "@universa11y/react-native-aria": "latest",
     "@universa11y/transitions": "latest",
     "@universa11y/utils": "latest",
