--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
     "@commitlint/config-conventional": "^17.3.0",
-    "@dank-style/react": "0.1.53",
+    "@dank-style/react": "^0.2.4",
     "@react-native-community/eslint-config": "^3.2.0",
     "commitlint": "^17.3.0",
     "eslint": "^8.29.0",
@@ -35,6 +35,7 @@
   "dependencies": {
     "@gluestack/design-system": "^0.1.58",
     "@react-native-aria/overlays": "0.3.5",
+    "@types/react": "^18.0.28",
     "react-native-svg": "13.4.0"
   }
 }
