--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
     "@commitlint/config-conventional": "^17.3.0",
-    "@dank-style/react": "0.1.53",
+    "@dank-style/react": "^0.2.10",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@types/react": "^18.0.28",
     "commitlint": "^17.3.0",
     "eslint": "^8.29.0",
     "eslint-plugin-ft-flow": "^2.0.3",
