--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -30,6 +30,7 @@
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "fs": "^0.0.1-security",
+    "lucide-react-native": "^0.124.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-native-safe-area-context": "^4.4.1",
@@ -43,7 +44,6 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/traverse": "^7.20.13",
     "@babel/types": "^7.20.7",
-    "@dank-style/react": "*",
     "@gluestack/popper": "*",
     "@storybook/addon-actions": "^6.5.14",
     "@storybook/addon-controls": "^6.5.14",
@@ -69,7 +69,6 @@
     "typescript": "4.9.4"
   },
   "peerDependencies": {
-    "@dank-style/react": "*",
     "@gluestack/popper": "*",
     "@gluestack/ui": "*",
     "@gluestack/ui-creator": "*",
