--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
     "typescript": "^4.9.4"
   },
   "packageManager": "yarn@1.22.17",
-  "dependencies": {}
+  "dependencies": {
+    "@dank-style/react": "0.3.1-alpha.0"
+  }
 }
