--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   },
   "packageManager": "yarn@1.22.17",
   "dependencies": {
-    "@dank-style/react": "0.3.1-alpha.0"
+    "@dank-style/react": "^0.3.1-alpha.0"
   }
 }
