--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@gluestack-ui/react-native-aria": "*",
     "@gluestack-ui/utils": "*",
+    "@gluestack-ui/provider": "*",
     "@react-native-aria/focus": "^0.2.7",
     "react-native-svg": "13.4.0"
   },
