--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,23 +33,23 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Get published package version
-        id: version
-        run: |
-          for row in $(echo "${array}" | jq -r '.[] | @base64'); do
-              _jq() {
-              echo ${row} | base64 --decode | jq -r ${1}
-              }
-            PACKAGENAME=$(echo $(_jq '.name'))
-            PACKAGEVERSION=$(echo $(_jq '.version'))
-            if [ $PACKAGENAME = "@dank-style/storybook" ]
-            then
-              echo "::set-output name=version::$PACKAGEVERSION"
-              echo "::set-output name=updateStorybook::1"
-            fi
-          done
-        env:
-          array: ${{ steps.changesets.outputs.publishedPackages }}
+      # - name: Get published package version
+      #   id: version
+      #   run: |
+      #     for row in $(echo "${array}" | jq -r '.[] | @base64'); do
+      #         _jq() {
+      #         echo ${row} | base64 --decode | jq -r ${1}
+      #         }
+      #       PACKAGENAME=$(echo $(_jq '.name'))
+      #       PACKAGEVERSION=$(echo $(_jq '.version'))
+      #       if [ $PACKAGENAME = "@dank-style/storybook" ]
+      #       then
+      #         echo "::set-output name=version::$PACKAGEVERSION"
+      #         echo "::set-output name=updateStorybook::1"
+      #       fi
+      #     done
+      #   env:
+      #     array: ${{ steps.changesets.outputs.publishedPackages }}
 
       # - name: Emit repository_dispatch
       #   if: steps.version.outputs.updateStorybook == 1
@@ -75,6 +75,6 @@ jobs:
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
           # For posting a simple plain text message
-          slack-message: "A new version of ${{ github.event.repository.name }} was published!\n${{ toJSON(steps.changesets.outputs.publishedPackages) }}"
+          slack-message: "A new package was published in ${{ github.event.repository.name }}!\n${{ toJSON(steps.changesets.outputs.publishedPackages) }}"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
