--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,9 @@
   "access": "public",
   "baseBranch": "master",
   "updateInternalDependencies": "patch",
-  "ignore": ["@dank-style/storybook"]
+  "ignore": [
+    "@dank-style/storybook",
+    "expo-app",
+    "babel-dank-style-resolver-example"
+  ]
 }
