--- a/example/storybook/tsconfig.json
+++ b/example/storybook/tsconfig.json
@@ -36,7 +36,8 @@
       "@gluestack-ui/form-control": ["../../packages/form-control/src"],
       "@gluestack-ui/overlay": ["../../packages/overlay/src"],
       "@gluestack-ui/stack": ["../../packages/stack/src"],
-      "@gluestack-ui/vstack": ["../../packages/vstack/src"]
+      "@gluestack-ui/vstack": ["../../packages/vstack/src"],
+      "@dank-style/react": ["../../packages/dank-style/packages/react/src"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
