--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   },
   "packageManager": "yarn@1.22.17",
   "dependencies": {
-    "@dank-style/react": "^0.3.1-alpha.0"
+    "@expo/vector-icons": "^13.0.0"
   }
 }
