--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -21,6 +21,7 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.4.1",
     "@gluestack/design-system": "0.3.4",
     "@react-native-aria/overlays": "0.3.5-rc.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
