--- a/package.json
+++ b/package.json
@@ -35,7 +35,5 @@
     "typescript": "^4.9.4"
   },
   "packageManager": "yarn@1.22.17",
-  "dependencies": {
-    "@dank-style/react": "^0.3.5"
-  }
+  "dependencies": {}
 }
