--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,6 +25,10 @@
     "react-native-web": "^0.18.1",
     "tsconfig": "*"
   },
+  "dependencies": {
+    "inline-style-prefixer": "^6.0.1",
+    "normalize-css-color": "^1.0.2"
+  },
   "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
