--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -7,6 +7,8 @@
   "types": "lib/typescript/index.d.ts",
   "license": "MIT",
   "scripts": {
+    "test": "bash scripts/test.sh",
+    "update-test": "yarn test -u",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -19,6 +21,9 @@
     "build-storybook": "build-storybook",
     "build": "bob build",
     "release": "release-it"
+  },
+  "overrides": {
+    "react-test-renderer": "18.1.0"
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.1",
@@ -34,6 +39,7 @@
     "lucide-react-native": "^0.124.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-svg": "13.4.0",
     "uuidv4": "^6.2.13"
@@ -56,6 +62,7 @@
     "@storybook/addon-ondevice-controls": "next",
     "@storybook/addon-ondevice-notes": "next",
     "@storybook/addon-react-native-web": "^0.0.19",
+    "@storybook/addon-storyshots": "^6.5.16",
     "@storybook/client-api": "^6.5.15",
     "@storybook/react": "^6.5.14",
     "@storybook/react-native": "next",
@@ -65,8 +72,13 @@
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.18.10",
     "find-yarn-workspace-root": "^2.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-expo": "^46.0.0",
     "react-native-builder-bob": "^0.20.3",
+    "react-test-renderer": "18.1.0",
     "storybook-dark-mode": "^2.0.4",
+    "ts-jest": "^29.0.5",
     "typescript": "4.9.4"
   },
   "peerDependencies": {
