--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -17,13 +17,16 @@
     "update-stories": "sb-rn-get-stories --config-path .ondevice",
     "prestart": "yarn update-stories",
     "storybook-watcher": "sb-rn-watcher --config-path .ondevice",
-    "storybook": "start-storybook -p 6007",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6007",
+    "build-storybook": "storybook build",
     "build": "bob build",
     "release": "release-it"
   },
   "overrides": {
     "react-test-renderer": "18.1.0"
+  },
+  "resolutions": {
+    "@storybook/{app}/webpack": "^5"
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.1",
@@ -52,20 +55,22 @@
     "@babel/traverse": "^7.20.13",
     "@babel/types": "^7.20.7",
     "@gluestack/popper": "*",
-    "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-controls": "^6.5.14",
-    "@storybook/addon-docs": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.14",
-    "@storybook/addon-links": "^6.5.14",
+    "@storybook/addon-actions": "^7.0.0-rc.5",
+    "@storybook/addon-controls": "^7.0.0-rc.5",
+    "@storybook/addon-docs": "^7.0.0-rc.5",
+    "@storybook/addon-essentials": "^7.0.0-rc.5",
+    "@storybook/addon-links": "^7.0.0-rc.5",
+    "@storybook/addon-mdx-gfm": "^7.0.0-rc.5",
     "@storybook/addon-ondevice-actions": "next",
     "@storybook/addon-ondevice-backgrounds": "next",
     "@storybook/addon-ondevice-controls": "next",
     "@storybook/addon-ondevice-notes": "next",
-    "@storybook/addon-react-native-web": "^0.0.19",
-    "@storybook/addon-storyshots": "^6.5.16",
-    "@storybook/client-api": "^6.5.15",
-    "@storybook/react": "^6.5.14",
+    "@storybook/addon-react-native-web": "^0.0.20-next.2",
+    "@storybook/addon-storyshots": "^7.0.0-rc.5",
+    "@storybook/client-api": "^7.0.0-rc.5",
+    "@storybook/react": "^7.0.0-rc.5",
     "@storybook/react-native": "next",
+    "@storybook/react-webpack5": "^7.0.0-rc.5",
     "@types/react": "^18.0.27",
     "@types/react-native": "~0.70.6",
     "babel-loader": "^8.2.3",
@@ -75,11 +80,14 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-expo": "^46.0.0",
+    "react-dom": "^18.2.0",
     "react-native-builder-bob": "^0.20.3",
     "react-test-renderer": "18.1.0",
-    "storybook-dark-mode": "^2.0.4",
+    "storybook": "^7.0.0-rc.5",
+    "storybook-dark-mode": "^3.0.0-canary.191.4282.0",
     "ts-jest": "^29.0.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "webpack": "5"
   },
   "peerDependencies": {
     "@gluestack/popper": "*",
