--- a/.github/workflows/auto-assign-issue.yml
+++ b/.github/workflows/auto-assign-issue.yml
@@ -9,7 +9,7 @@ jobs:
     - name: Check Labels
       uses: actions/github-script@v5
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.MY_GITHUB_TOKEN }}
         script: |
           const issue = context.payload.issue
           const teamId = "7587515" // Replace with the ID of the team to which you want to assign issues
