--- a/.github/workflows/auto-assign-issue.yml
+++ b/.github/workflows/auto-assign-issue.yml
@@ -3,26 +3,18 @@ on:
   issues:
     types: [opened, edited, labeled]
 jobs:
-  auto-assign:
+  assign:
     runs-on: ubuntu-latest
     steps:
-    - name: Check Labels
-      uses: actions/github-script@v5
+    - name: Get team members
+      id: team_members
+      uses: peter-evans/get-team-members@v1
       with:
-        github-token: ${{ secrets.MY_ASSIGNMENT_TOKEN }}
-        script: |
-          const issue = context.payload.issue
-          const teamId = "7587515" // Replace with the ID of the team to which you want to assign issues
-          const res = await github.teams.listMembersInOrg({
-            team_id: teamId,
-            role: "member"
-          })
-          const members = res.data.map(member => member.login)
-          const assignee = members[Math.floor(Math.random() * members.length)]
-          const params = {
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            issue_number: issue.number,
-            assignees: [assignee]
-          }
-          await github.issues.addAssignees(params)
+        team-id: 123456 # Replace with your team ID
+        role: member
+        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Assign issue
+      uses: peter-evans/assignee@v2
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        assignees: ${{ steps.team_members.outputs.members[github.event.issue.number % steps.team_members.outputs.count] }}
