--- a/.github/workflows/auto-assign-issue.yml
+++ b/.github/workflows/auto-assign-issue.yml
@@ -10,11 +10,16 @@ jobs:
       id: team_members
       uses: peter-evans/get-team-members@v1
       with:
-        team-id: 7579007 # Replace with your team ID
+        team-id: 123456 # Replace with your team ID
         role: member
         token: ${{ secrets.GITHUB_TOKEN }}
     - name: Assign issue
       uses: peter-evans/assignee@v2
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        assignees: ${{ steps.team_members.outputs.members[steps.team_members.outputs.count - 1] }}
+        assignees: ${{ steps.team_members.outputs.members[mod(github.event.issue.number, steps.team_members.outputs.count)] }}
+functions:
+  mod: |
+    define mod(n, m) {
+      return n % m;
+    }
