--- a/example/storybook/src/ui-components/Alert/config.json
+++ b/example/storybook/src/ui-components/Alert/config.json
@@ -1,1 +1,5 @@
-{ "dependencies": {}, "keywords": ["components", "core"] }
+{
+  "dependencies": {},
+  "componentDependencies": ["Icons"],
+  "keywords": ["components", "core"]
+}
