--- a/example/storybook/package.json
+++ b/example/storybook/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@expo/html-elements": "^0.4.1",
     "@gluestack/design-system": "0.3.4",
+    "@legendapp/motion": "^2.2.0",
     "@react-native-aria/overlays": "0.3.5-rc.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
@@ -42,6 +43,7 @@
     "@babel/core": "^7.19.3",
     "@babel/generator": "^7.20.7",
     "@babel/parser": "^7.20.13",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/traverse": "^7.20.13",
     "@babel/types": "^7.20.7",
