--- a/.github/workflows/auto-assign-issue.yml
+++ b/.github/workflows/auto-assign-issue.yml
@@ -12,6 +12,6 @@ jobs:
         uses: pozil/auto-assign-issue@v1
         with:
           repo-token: ${{ secrets.MY_GITHUB_TOKEN }}
-          teams: dank-style
+          teams: dank-style-support
           numOfAssignee: 1
           allowSelfAssign: false
