--- a/menu/package.json
+++ b/menu/package.json
@@ -33,8 +33,10 @@
     "@gluestack-ui/transitions": "latest",
     "@gluestack-ui/utils": "latest",
     "@react-native-aria/focus": "^0.2.7",
+    "@react-native-aria/menu": "^0.2.6",
     "@react-native-aria/overlays": "0.3.5",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-stately": "^3.21.0"
   },
   "peerDependencies": {
     "react": ">=16",
