--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -28,7 +28,9 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@gluestack-ui/utils": "latest"
+    "@gluestack-ui/react-native-aria": "latest",
+    "@gluestack-ui/utils": "latest",
+    "@react-native-aria/focus": "^0.2.7"
   },
   "peerDependencies": {
     "react": "*",
