--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -28,14 +28,15 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@react-native-aria/focus": "^0.2.7",
+    "@react-native-aria/interactions": "^0.2.7",
+    "@react-native-aria/checkbox": "^0.2.3",
     "@gluestack-ui/form-control": "latest",
     "@gluestack-ui/react-native-aria": "latest",
     "@gluestack-ui/utils": "latest",
     "@react-aria/visually-hidden": "latest",
-    "@react-native-aria/checkbox": "^0.2.3",
     "@react-stately/checkbox": "3.0.3",
-    "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "13.4.0"
+    "@react-stately/toggle": "^3.2.3"
   },
   "peerDependencies": {
     "react": ">=16",
