--- a/packages/actionsheet/package.json
+++ b/packages/actionsheet/package.json
@@ -33,6 +33,7 @@
     "@gluestack-ui/react-native-aria": "latest",
     "@gluestack-ui/transitions": "latest",
     "@gluestack-ui/utils": "latest",
+    "@react-native-aria/dialog": "^0.1.0",
     "@react-native-aria/focus": "^0.2.7"
   },
   "peerDependencies": {
