--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -31,8 +31,7 @@
     "@gluestack-ui/form-control": "latest",
     "@gluestack-ui/react-native-aria": "latest",
     "@gluestack-ui/utils": "latest",
-    "@react-native-aria/focus": "^0.2.7",
-    "react-native-svg": "13.4.0"
+    "@react-native-aria/interactions": "latest"
   },
   "peerDependencies": {
     "react": ">=16",
