--- a/packages/actionsheet/tsconfig.json
+++ b/packages/actionsheet/tsconfig.json
@@ -31,6 +31,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "ignoreDeprecations": "5.0"
   }
 }
