--- a/switch/package.json
+++ b/switch/package.json
@@ -31,7 +31,8 @@
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/interactions": "^0.2.8",
     "@react-stately/toggle": "^3.4.4",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "@gluestack-ui/form-control": "latest"
   },
   "peerDependencies": {
     "react": ">=16",
