--- a/slider/package.json
+++ b/slider/package.json
@@ -28,13 +28,13 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@gluestack-ui/react-native-aria": "latest",
+    "@gluestack-ui/hooks": "latest",
+    "@gluestack-ui/form-control": "latest",
+    "@react-aria/visually-hidden": "latest",
     "@gluestack-ui/utils": "latest",
-    "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/interactions": "^0.2.8",
     "@react-native-aria/slider": "^0.2.5-alpha.2",
-    "@react-stately/slider": "^3.2.4",
-    "react-native-svg": "13.4.0"
+    "@react-stately/slider": "^3.2.4"
   },
   "peerDependencies": {
     "react": ">=16",
