--- a/actionsheet/package.json
+++ b/actionsheet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/actionsheet",
-  "version": "0.1.4-alpha.1",
+  "version": "0.2.0",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
